# DebateAI

./: .gitignore  CLAUDE.md  README.md  deploy.sh
.github/workflows/: backend-test.yml  ci-cd.yml  frontend-test.yml
backend/: .coverage  .coveragerc  Dockerfile  package-lock.json  pyproject.toml  pytest.ini  worker-configuration.d.ts  wrangler.jsonc
backend/app/: graph.py  main.py  supabase_client.py
backend/app/services/: debate_service.py
backend/app/tools/: __init__.py  search.py
backend/tests/: conftest.py  test_graph.py  test_main.py  test_search.py  test_service.py  test_supabase_client.py
docs/: ARCHITECTURE_DECISIONS.md  IMPLEMENTATION.md  phase-3b-plan.md  測試題目庫.md  網頁部署指南.md
docs/dev_notes/: 12-05-dev-notes.md  12-10-dev-notes.md  12-12-dev-notes.md  12-20-dev-notes.md  12-22-dev-notes.md  12-26-dev-notes.md
frontend/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts  wrangler.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/__tests__/: test-utils.tsx
frontend/app/about/: page.tsx
frontend/app/components/: DebateUI.tsx  MessageBubble.tsx  TopicForm.tsx
frontend/app/history/: page.tsx
frontend/components/: Providers.tsx  app-sidebar.tsx
frontend/contexts/: DebateHistoryContext.tsx
frontend/lib/: i18n.tsx
homework/: fastapi-assignment-plan.md  fastapi-final-report.docx  fastapi-final-report.md  fastapi-word-report.md
homework/fastapi-demo/: README.md
supabase/: config.toml
supabase/migrations/: 20251222065406_create_debate_history.sql
(+17 files in other folders)
