[project]
name = "debate-ai-backend"
version = "0.1.0"
description = "DebateAI Backend - Multi-Agent Debate Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=1.0.0",
    "tavily-python>=0.5.0",     # Phase 3b: 搜尋工具（主）
    "duckduckgo-search>=6.0.0", # Phase 3b: 搜尋工具（備援）
    "supabase>=2.10.0",         # Phase 4: 辯論歷史儲存
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
